--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
                                   malesuada pellentesque neque, id condimentum purus finibus eu.
                                 </p>
                             </article>
-                            <footer>
-                                Made with ❤️ in Northen california. © 2019 All Rights Reserved
-                            </footer>
+                            
                     </main>
                 </div>
-              </div>
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="assets/js/sidebar.js"></script>
         </body>
+        <footer>
+            Made with ❤️ in Northen california. © 2019 All Rights Reserved
+        </footer>
 </html>
