Add contact.html page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                             <li>
                                 <a href="about.html"><i class="fas fa-id-card"></i> About</a>
                             </li>
+                            <li>
+                                <a href="contact.html"><i class="fas fa-comment-dots"></i> Contact
+                                </a>
+                            </li>
                           </ul>
                         </div>
                     </nav>
@@ -73,14 +77,14 @@
                                   malesuada pellentesque neque, id condimentum purus finibus eu.
                                 </p>
                             </article>
-                            
+                            <footer>
+                                Made with ❤️ in Northen california. © 2019 All Rights Reserved
+                            </footer>
                     </main>
                 </div>
             </div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="assets/js/sidebar.js"></script>
         </body>
-        <footer>
-            Made with ❤️ in Northen california. © 2019 All Rights Reserved
-        </footer>
+        
 </html>
